--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "em-register",
 	"version": "1.0.0",
 	"description": "emRegister is a service register for your interfaces to follow mvc architecture",
-	"main": "index.ts",
+	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
 	"files": [
