--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "em-register",
+	"name": "em-register-v1",
 	"version": "1.0.1",
 	"description": "emRegister is a service register for your interfaces to follow mvc architecture",
 	"main": "dist/index.js",
@@ -18,6 +18,7 @@
 		"url": "git+ssh://git@github.com/Ethern-Myth/em-register.git"
 	},
 	"keywords": [
+		"services",
 		"javascript",
 		"typescript"
 	],
